--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
   }
 
   /* ===== background aesthetic elements (no interaction) ===== */
-  const bgWords = ['CV','Compétences','Entretien','Savoir-être','Mission Locale','Stage','Emploi','Projet'];
+  const bgWords = ['CV','Compétences','Entretien','Savoir-être','Mission Locale','Stage','Emploi','Projet, la Réunion, ];
   function drawBackground(){
     // subtle background words/icons for aesthetic only
     ctx.save();
