--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Mission Locale — Dino Pro (Infini + Quiz & Niveaux)</title>
+<title>Mission Locale — le jeu Mission locale  (Infini + Quiz & Niveaux)</title>
 <style>
   :root{
     --bg: #f7fcfd;
